fix layout issue in Firefox

--- a/app/assets/stylesheets/content/_timer.css.scss
+++ b/app/assets/stylesheets/content/_timer.css.scss
@@ -48,7 +48,7 @@
     text-align: center;
     width: 30%;
     padding: 1em;
-    margin-left: 2.7em;
+    margin-left: 2.6em;
     display: inline-block;
     border-radius: 10px;
     background-color: #517397;
